# Truthfulness

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
Optmize/: 优化方案参考.md
app/: README.md  streamlit_app.py
configs/: README.md  agent-requirements.txt  train_baseline.smoke.example.toml  training_data_quality.example.toml  ubuntu-wsl-requirements.freeze.txt  version_id_policy.toml
configs/agents/: source_depth_agent_v1_2.toml  stage5_v02_agent_topology_v1.toml  stage5_v02_agent_topology_v1_1.toml
configs/observability/: model_telemetry_v1.toml
configs/prompts/: youtube_claim_atomic_split_repair_v1.txt  youtube_claim_atomic_split_v1_1.txt  youtube_claim_extraction_v1_1.txt
configs/storage/: claim_warehouse_requirements.freeze.txt  claim_warehouse_v1.toml
configs/workflows/: youtube_truthfulness_dag_v1.yaml  youtube_truthfulness_dag_v1_1.yaml  youtube_truthfulness_dag_v1_2.yaml  youtube_truthfulness_dag_v1_3.yaml  youtube_truthfulness_dag_v1_4.yaml
docs/: README.md  agent_rag.md  artifact_registry_and_dag.md  claim_warehouse.md  file_layout.md  handoff_events_checkpoints.md  interfaces.md  model_telemetry.md  training_data_quality.md  version_and_id_system.md
evals/: README.md
evals/V01/: agent_cases.jsonl
examples/: README.md
examples/agent_demo/: README.md  sources.jsonl
examples/offline_demo/: README.md  evidence.json  transcript.json
examples/training_data/: PUBLIC_DEMO_SUMMARY.md  README.md  input.synthetic.jsonl  splits.synthetic.jsonl
models/: README.md
report/: v0.1成果汇报.md
report/V01/: Annotation-example.md
report/V02/: Annotation-schema.md
runs/: README.md
schemas/: README.md  legacy_run_id_map_v1.schema.json  run_identity_v1.schema.json
schemas/artifact_registry/: artifact_record_v1.schema.json  artifact_record_v1_1.schema.json  artifact_record_v1_2.schema.json  entity_index_v1.schema.json
schemas/dag/: youtube_truthfulness_dag_v1.schema.json  youtube_truthfulness_dag_v1_1.schema.json  youtube_truthfulness_dag_v1_2.schema.json  youtube_truthfulness_dag_v1_3.schema.json  youtube_truthfulness_dag_v1_4.schema.json
schemas/execution/: current_state_v1.schema.json  current_state_v1_1.schema.json  current_state_v1_3.schema.json  execution_checkpoint_v1.schema.json  execution_checkpoint_v1_1.schema.json  execution_checkpoint_v1_3.schema.json  execution_event_v1.schema.json  execution_event_v1_0_1.schema.json  handoff_v2.schema.json  handoff_v2_1.schema.json  handoff_v2_3.schema.json  input_materialization_v1.schema.json  input_materialization_v1_1.schema.json  manual_external_input_receipt_v1.schema.json  model_call_event_v1.schema.json  model_usage_summary_v1.schema.json  session_manifest_v1.schema.json  session_manifest_v1_1.schema.json  (+7 more)
scripts/: export_training_data_schemas.py  start_agent_demo.sh  ubuntu_wsl_asr_gpu_check.sh  ubuntu_wsl_repro_check.sh  ubuntu_wsl_streamlit.sh  validate_claim_warehouse.py  validate_version_ids.py
src/: README.md
tests/: README.md  conftest.py  test_agent_api.py  test_agent_evals.py  test_agent_graph.py  test_agent_models.py  test_demo1_interfaces.py  test_offline_pipeline.py  test_schemas.py  test_training.py  test_training_data_quality.py  test_version_boundaries.py
(+174 files in other folders)
