[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-truthfulness"
version = "0.1.0"
description = "Evidence-first video claim verification demo."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Video Truthfulness maintainers" }
]
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31",
    "scikit-learn>=1.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]
ui = [
    "streamlit>=1.35"
]
media = [
    "yt-dlp>=2024.0",
    "imageio-ffmpeg>=0.6"
]
asr = [
    "faster-whisper>=1.2"
]

[project.scripts]
video-truthfulness = "video_truthfulness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
