[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-truthfulness"
version = "0.1.0"
description = "Evidence-first video claim verification demo."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Video Truthfulness maintainers" }
]
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31",
    "scikit-learn>=1.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28"
]
ui = [
    "streamlit>=1.35"
]
agent = [
    "chromadb>=1.0,<2.0",
    "fastapi>=0.115,<1.0",
    "fastembed>=0.7,<1.0",
    "langgraph>=1.0,<2.0",
    "tenacity>=9.0,<10.0",
    "uvicorn[standard]>=0.34,<1.0"
]
media = [
    "yt-dlp>=2024.0",
    "imageio-ffmpeg>=0.6"
]
asr = [
    "faster-whisper>=1.2"
]

[project.scripts]
video-truthfulness = "video_truthfulness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
